Terminado estilo inicial beneficios steel frame

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 </ul>
             </div>
         </nav>
+
     </header>
 
     <section id="servicios">
@@ -117,32 +118,38 @@
 
 
             <div class="ventajas-card">
-                <h3>Beneficios de la construccion con Steelframe</h3>
-                <div class="item">
+                <h3 data-aos="zoom-in" data-aos-offset="150">Beneficios de la construccion con Steelframe</h3>
+                <div class="item" data-aos="fade-right" data-aos-offset="150">
                     <i class="fas fa-check"></i>
-                    <p>Flexibilidad arquitectónica, se adapta a cualquier tipo de proyecto</p>
+                    <p> <span>Flexibilidad arquitectónica:</span> Se adapta a cualquier tipo de proyecto</p>
                 </div>
-                <div class="item">
+                <div class="item" data-aos="fade-right" data-aos-offset="150">
                     <i class="fas fa-check"></i>
-                    <p>Durabilidad, tanto las placas como los materiales se mantienen inalterables durante décadas</p>
+                    <p> <span>Durabilidad:</span> Tanto las placas como los materiales se mantienen inalterables durante décadas</p>
                 </div>
-                <div class="item">
+                <div class="item" data-aos="fade-right" data-aos-offset="150">
                     <i class="fas fa-check"></i>
-                    <p>Excelente aislación térmica y acústica, superando a la mampostería un 60% en materia de sonido y
+                    <p> <span>Excelente aislación térmica y acústica:</span> Supera a la mampostería un 60% en materia de sonido y
                         un 115% a nivel térmico.</p>
                 </div>
-                <div class="item">
+                <div class="item" data-aos="fade-right" data-aos-offset="150">
                     <i class="fas fa-check"></i>
-                    <p>Velocidad, Las viviendas en steel framing se construyen en un 70% menos de tiempo que una obra
+                    <p> <span>Velocidad:</span> Las viviendas en steel framing se construyen en un 70% menos de tiempo que una obra
                         “húmeda”.</p>
                 </div>
-                <div class="item">
+                <div class="item" data-aos="fade-right" data-aos-offset="150">
                     <i class="fas fa-check"></i>
-                    <p>Optimización de materiales calculando previamente todo lo necesario, reduciendo desperdicios y costos</p>
+                    <p> <span>Optimización de materiales:</span> Se calcula previamente todo lo necesario, reduciendo así desperdicios y costos</p>
                 </div>
-                <div class="item">
+                <div class="item" data-aos="fade-right" data-aos-offset="150">
                     <i class="fas fa-check"></i>
-                    <p>Flexibilidad arquitectónica, se adapta a cualquier tipo de proyecto</p>
+                    <p> <span>Menor costo en mano de obra:</span> El steel framing emplea un 50% menos de personal que la construcción
+                        con ladrillos</p>
+                </div>
+                <div class="item" data-aos="fade-right" data-aos-offset="150">
+                    <i class="fas fa-check"></i>
+                    <p> <span>Menor costo en general:</span> Todas estas ventajas suponen una diferencia de costos cuando se desarrolla una obra en steel
+                        framing</p>
                 </div>
             </div>
 
