Insertado logo en wallpaper principal

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </ul>
             </div>
         </nav>
-
+        <img data-aos="zoom-in-down" data-aos-duration="800000" class="kh-png" src="./assets/imgs/kh-logo.png" alt="">
     </header>
 
     <section id="servicios">
@@ -112,7 +112,7 @@
             <div class="parallax">
                 <img src="./assets/imgs/khalifa-w1.jpeg">
             </div>
-            <h2 data-aos="fade-in">Construimos con Steel Frame para la mejor calidad!</h2>
+            <h2 data-aos="fade-in">Construimos con Steel Frame para brindar la mejor calidad</h2>
         </div>
 
 
