--- a/index.html
+++ b/index.html
@@ -16,24 +16,22 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700&display=swap"
         rel="stylesheet">
 
-    <!-- MATERIALIZE -->
-
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
     <!-- BOOTSTRAP -->
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
     </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
     </script>
+
+    <link rel="stylesheet" href="./materialize.css">
 
 
     <link rel="stylesheet" href="./reset.css">
@@ -67,7 +65,7 @@
                 </ul>
             </div>
         </nav>
-        <img data-aos="zoom-in-down" data-aos-duration="800000" class="kh-png" src="./assets/imgs/kh-logo.png" alt="">
+        <img data-aos="zoom-in-down" data-aos-duration="1000" class="kh-png" src="./assets/imgs/kh-logo.png" alt="">
     </header>
 
     <section id="servicios">
@@ -117,43 +115,161 @@
 
 
 
-            <div class="ventajas-card">
-                <h3 data-aos="zoom-in" data-aos-offset="150">Beneficios de la construccion con Steelframe</h3>
-                <div class="item" data-aos="fade-right" data-aos-offset="150">
-                    <i class="fas fa-check"></i>
-                    <p> <span>Flexibilidad arquitectónica:</span> Se adapta a cualquier tipo de proyecto</p>
-                </div>
-                <div class="item" data-aos="fade-right" data-aos-offset="150">
-                    <i class="fas fa-check"></i>
-                    <p> <span>Durabilidad:</span> Tanto las placas como los materiales se mantienen inalterables durante décadas</p>
-                </div>
-                <div class="item" data-aos="fade-right" data-aos-offset="150">
-                    <i class="fas fa-check"></i>
-                    <p> <span>Excelente aislación térmica y acústica:</span> Supera a la mampostería un 60% en materia de sonido y
-                        un 115% a nivel térmico.</p>
-                </div>
-                <div class="item" data-aos="fade-right" data-aos-offset="150">
-                    <i class="fas fa-check"></i>
-                    <p> <span>Velocidad:</span> Las viviendas en steel framing se construyen en un 70% menos de tiempo que una obra
-                        “húmeda”.</p>
-                </div>
-                <div class="item" data-aos="fade-right" data-aos-offset="150">
-                    <i class="fas fa-check"></i>
-                    <p> <span>Optimización de materiales:</span> Se calcula previamente todo lo necesario, reduciendo así desperdicios y costos</p>
-                </div>
-                <div class="item" data-aos="fade-right" data-aos-offset="150">
-                    <i class="fas fa-check"></i>
-                    <p> <span>Menor costo en mano de obra:</span> El steel framing emplea un 50% menos de personal que la construcción
-                        con ladrillos</p>
-                </div>
-                <div class="item" data-aos="fade-right" data-aos-offset="150">
-                    <i class="fas fa-check"></i>
-                    <p> <span>Menor costo en general:</span> Todas estas ventajas suponen una diferencia de costos cuando se desarrolla una obra en steel
-                        framing</p>
-                </div>
+        <div class="ventajas-card">
+            <h3 data-aos="zoom-in" data-aos-offset="120">Beneficios de la construccion con Steelframe</h3>
+            <div class="item" data-aos="fade-right" data-aos-offset="120">
+                <i class="fas fa-check"></i>
+                <p> <span>Flexibilidad arquitectónica:</span> Se adapta a cualquier tipo de proyecto</p>
             </div>
+            <div class="item" data-aos="fade-right" data-aos-offset="120">
+                <i class="fas fa-check"></i>
+                <p> <span>Durabilidad:</span> Tanto las placas como los materiales se mantienen inalterables durante
+                    décadas</p>
+            </div>
+            <div class="item" data-aos="fade-right" data-aos-offset="120">
+                <i class="fas fa-check"></i>
+                <p> <span>Excelente aislación térmica y acústica:</span> Supera a la mampostería un 60% en materia de
+                    sonido y
+                    un 115% a nivel térmico.</p>
+            </div>
+            <div class="item" data-aos="fade-right" data-aos-offset="120">
+                <i class="fas fa-check"></i>
+                <p> <span>Velocidad:</span> Las viviendas en steel framing se construyen en un 70% menos de tiempo que
+                    una obra
+                    “húmeda”.</p>
+            </div>
+            <div class="item" data-aos="fade-right" data-aos-offset="120">
+                <i class="fas fa-check"></i>
+                <p> <span>Optimización de materiales:</span> Se calcula previamente todo lo necesario, reduciendo así
+                    desperdicios y costos</p>
+            </div>
+            <div class="item" data-aos="fade-right" data-aos-offset="120">
+                <i class="fas fa-check"></i>
+                <p> <span>Menor costo en mano de obra:</span> El steel framing emplea un 50% menos de personal que la
+                    construcción
+                    con ladrillos</p>
+            </div>
+            <div class="item" data-aos="fade-right" data-aos-offset="120">
+                <i class="fas fa-check"></i>
+                <p> <span>Menor costo en general:</span> Todas estas ventajas suponen una diferencia de costos cuando se
+                    desarrolla una obra en steel
+                    framing</p>
+            </div>
+        </div>
 
     </section>
+
+
+    <section id="galeria">
+        <div data-aos="fade-right" class="nuestras-obras">
+            <h2>Nuestras obras</h2>
+        </div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="./assets/imgs/carousel/posada-poetas-2.jpg" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Obra en Posada de los poetas</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/imgs/carousel/posada-poetas.jpg" alt="">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Obra en Posada de los poetas</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/imgs/carousel/quincho-vaqueros.jpg" alt="">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Obra en Vaqueros</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/imgs/carousel/mollar1.jpg" alt="">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Obra en El Mollar</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/imgs/carousel/mollar2.jpg" alt="">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Obra en El Mollar</h5>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </section>
+
+    <section id="contacto">
+        <h2 data-aos="fade-right">Hace tu consulta aquí</h2>
+        <div class="row" id="form-container" data-aos="fade-up">
+            <form class="col s12">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="first_name" type="text" class="validate" autocomplete="off">
+                        <label for="first_name">Nombre</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input id="email" type="email" class="validate" autocomplete="off">
+                        <label for="email">Email</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <!-- <i class="material-icons prefix">phone</i> -->
+                        <input id="icon_telephone" type="tel" class="validate" autocomplete="off">
+                        <label for="icon_telephone">Teléfono</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <textarea id="textarea1" class="materialize-textarea"></textarea>
+                        <label for="textarea1">Consulta</label>
+                    </div>
+                </div>
+                <button class="btn waves-effect waves-light" type="submit" name="action">Enviar
+                    <i class="material-icons right"></i>
+                </button>
+            </form>
+        </div>
+        <div id="map" data-aos="fade-left"></div>
+    </section>
+
+
+    <footer>
+        <div>
+            <p> &copy; Khalifa 2020</p>
+        </div>
+        <div class="redes-container">
+            <p>Seguinos en nuestras redes</p>
+            <div class="redes">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-instagram"></i>
+            </div>
+        </div>
+        <div class="info">
+            <p class="bold">Encontranos en: </p>
+            <p>O'higgins 937, depto. 2"A", Capital</p>
+            <p class="bold">Horarios de atencion:</p>
+            <p> Lunes a viernes: 8:00 - 18:00 hs.</p>
+            <p>Sábado: 8:00 - 14:00 hs.</p>
+        </div>
+    </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -173,6 +289,30 @@
         });
     </script>
 
+    <script>
+        // Initialize and add the map
+        function initMap() {
+            // The location of Khalifa
+            var khalifa = {
+                lat: -24.775987,
+                lng: -65.414299
+            };
+            // The map
+            var map = new google.maps.Map(
+                document.getElementById('map'), {
+                    zoom: 15,
+                    center: khalifa
+                });
+            // The marker
+            var marker = new google.maps.Marker({
+                position: khalifa,
+                map: map
+            });
+        }
+    </script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0L83DFvfu4ovwwcYHX2VXYrTofjRW_aQ&callback=initMap">
+    </script>
 </body>
 
 </html>
