Adds steel frame info

--- a/index.html
+++ b/index.html
@@ -113,7 +113,22 @@
             <h2 data-aos="fade-in">Construimos con Steel Frame para brindar la mejor calidad</h2>
         </div>
 
-
+        <div class="steel-frame-info">
+            <div data-aos="fade-right" data-aos-duration="1500" class="info">
+                <h2>¿Qué es el sistema constructivo Steel Frame?</h2>
+                <p>Es un conjunto de técnicas constructivas que reducen al máximo la utilización de agua.
+                    <br>Los materiales que conforman este sistema de construcción industrializado (perfiles, placas de
+                    yeso, placas de cemento, aislaciones, etc.), reemplazan aquellos utilizados en la construcción
+                    tradicional, evitando así los tiempos de fragüe, y generando a la vez un sistema de ejecución
+                    rápida, con una sobresaliente resistencia al fuego y mayores aislamientos térmico y acústico.
+                    <br>Todos los componentes que influyen en la construcción Steel Frame son controlados bajo estrictas
+                    normas de calidad y a su vez la conformación de la estructura es sometida a cálculos estructurales
+                    realizados por un Ingeniero Civil, por lo que la estabilidad y la sustentabilidad de la construcción
+                    supera a la construcción tradicional</p>
+            </div>
+            <img data-aos="fade-left" data-aos-duration="1500" class="steel-frame-img"
+                src="./assets/imgs/steel-frame.png" alt="">
+        </div>
 
         <div class="ventajas-card">
             <h3 data-aos="zoom-in" data-aos-offset="120">Beneficios de la construccion con Steelframe</h3>
@@ -253,7 +268,7 @@
 
     <footer>
         <div>
-            <p> &copy; Khalifa 2020</p>
+            <p class="copyright"> &copy; Khalifa 2020</p>
         </div>
         <div class="redes-container">
             <p>Seguinos en nuestras redes</p>
