Adds mobile version

--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
 </head>
 
 <body>
-    <header id="container">
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+    <div class="elfsight-app-0988ff4e-8b53-4647-b091-c37690979a9d"></div>
+    <header class="section-container">
         <img src="./assets/imgs/1899388.jpg" alt="" id="background-image">
         <nav class="navbar navbar-expand-lg navbar-dark" id="navbar">
-            <a class="navbar-brand" href="#"><img src="./assets/icons/kh-logo-2.png" id="khalifa-logo" alt=""></a>
+            <a class="navbar-brand" href="#"><img src="./assets/icons/kh-logo-2.png" class="kh-logo" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -68,7 +70,7 @@
         <img data-aos="zoom-in-down" data-aos-duration="1000" class="kh-png" src="./assets/imgs/kh-logo.png" alt="">
     </header>
 
-    <section id="servicios">
+    <section id="servicios" class="section-container">
         <div class="servicio" data-aos="fade-in">
             <h2>Nuestros Servicios</h2>
         </div>
@@ -116,12 +118,14 @@
         <div class="steel-frame-info">
             <div data-aos="fade-right" data-aos-duration="1500" class="info">
                 <h2>¿Qué es el sistema constructivo Steel Frame?</h2>
+                <img class="steel-frame-inner-img" data-aos="fade-right" data-aos-duration="1500" src="./assets/imgs/steel-frame.png" alt="">
                 <p>Es un conjunto de técnicas constructivas que reducen al máximo la utilización de agua.
                     <br>Los materiales que conforman este sistema de construcción industrializado (perfiles, placas de
                     yeso, placas de cemento, aislaciones, etc.), reemplazan aquellos utilizados en la construcción
                     tradicional, evitando así los tiempos de fragüe, y generando a la vez un sistema de ejecución
                     rápida, con una sobresaliente resistencia al fuego y mayores aislamientos térmico y acústico.
-                    <br>Todos los componentes que influyen en la construcción Steel Frame son controlados bajo estrictas
+                    <br>Todos los componentes que influyen en la construcción Steel Frame son controlados bajo
+                    estrictas
                     normas de calidad y a su vez la conformación de la estructura es sometida a cálculos estructurales
                     realizados por un Ingeniero Civil, por lo que la estabilidad y la sustentabilidad de la construcción
                     supera a la construcción tradicional</p>
@@ -278,11 +282,11 @@
             </div>
         </div>
         <div class="info">
-            <p class="bold">Encontranos en: </p>
-            <p>O'higgins 937, depto. 2"A", Capital</p>
-            <p class="bold">Horarios de atencion:</p>
-            <p> Lunes a viernes: 8:00 - 18:00 hs.</p>
-            <p>Sábado: 8:00 - 14:00 hs.</p>
+            <p>Encontranos en: </p>
+            <p class="sub-text">O'higgins 937, depto. 2"A", Capital</p>
+            <p>Horarios de atencion:</p>
+            <p class="sub-text">Lunes a viernes: 8:00 - 18:00 hs.</p>
+            <p class="sub-text">Sábado: 8:00 - 14:00 hs.</p>
         </div>
     </footer>
 
