--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
             <div class="collapse navbar-collapse navbar-right" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item ">
-                        <a class="nav-link" href="#">Servicios</a>
+                        <a class="nav-link" href="#servicios">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Steel Frame</a>
+                        <a class="nav-link" href="#steel-frame">Steel Frame</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Obras</a>
+                        <a class="nav-link" href="#galeria">Obras</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Consultas</a>
+                        <a class="nav-link" href="#contacto">Consultas</a>
                     </li>
                 </ul>
             </div>
@@ -94,7 +94,7 @@
                 otros.
             </p>
         </div>
-        <div class="servicio" data-aos="fade-right">
+        <div class="servicio" data-aos="fade-right" data-aos-offset="140">
             <i class="fas fa-cogs"></i>
             <h5>Obras de Mantenimiento</h5>
             <p>
@@ -118,7 +118,8 @@
         <div class="steel-frame-info">
             <div data-aos="fade-right" data-aos-duration="1500" class="info">
                 <h2>¿Qué es el sistema constructivo Steel Frame?</h2>
-                <img class="steel-frame-inner-img" data-aos="fade-right" data-aos-duration="1500" src="./assets/imgs/steel-frame.png" alt="">
+                <img class="steel-frame-inner-img" data-aos="fade-right" data-aos-duration="1500"
+                    src="./assets/imgs/steel-frame.png" alt="">
                 <p>Es un conjunto de técnicas constructivas que reducen al máximo la utilización de agua.
                     <br>Los materiales que conforman este sistema de construcción industrializado (perfiles, placas de
                     yeso, placas de cemento, aislaciones, etc.), reemplazan aquellos utilizados en la construcción
@@ -329,6 +330,17 @@
             });
         }
     </script>
+
+    <!-- <script>
+        $(document).on("click", "a", function (e) {
+            e.preventDefault();
+            var id = $(this).attr("href"),
+                topSpace = 30;
+            $('html, body').animate({
+                scrollTop: $(id).offset().top - topSpace
+            }, 800);
+        });
+    </script> -->
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0L83DFvfu4ovwwcYHX2VXYrTofjRW_aQ&callback=initMap">
     </script>
