Adds links to social networks and icons to form inputs

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </script>
 
     <link rel="stylesheet" href="./materialize.css">
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
     <link rel="stylesheet" href="./reset.css">
@@ -241,23 +242,27 @@
             <form class="col s12">
                 <div class="row">
                     <div class="input-field col s6">
+                        <i class="material-icons prefix">account_circle</i>
                         <input id="first_name" type="text" class="validate" autocomplete="off">
                         <label for="first_name">Nombre</label>
                     </div>
                     <div class="input-field col s6">
+                        <i class="material-icons prefix">mail</i>
                         <input id="email" type="email" class="validate" autocomplete="off">
                         <label for="email">Email</label>
                     </div>
                 </div>
                 <div class="row">
+                    
                     <div class="input-field col s12">
-                        <!-- <i class="material-icons prefix">phone</i> -->
+                        <i class="material-icons prefix">phone</i>
                         <input id="icon_telephone" type="tel" class="validate" autocomplete="off">
                         <label for="icon_telephone">Teléfono</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
+                        <i class="material-icons prefix">mode_edit</i>
                         <textarea id="textarea1" class="materialize-textarea"></textarea>
                         <label for="textarea1">Consulta</label>
                     </div>
@@ -278,8 +283,12 @@
         <div class="redes-container">
             <p>Seguinos en nuestras redes</p>
             <div class="redes">
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-instagram"></i>
+                <a target="_blank" href="https://www.facebook.com/Khalifa-Ingenier%C3%ADa-Construcci%C3%B3n-2129816087298336">
+                    <i class="fab fa-facebook"></i>
+                </a>
+                <a target="_blank"  href="https://www.instagram.com/khalifa_ing/">
+                    <i class="fab fa-instagram"></i>
+                </a>
             </div>
         </div>
         <div class="info">
