--- a/index.html
+++ b/index.html
@@ -126,11 +126,6 @@
                     yeso, placas de cemento, aislaciones, etc.), reemplazan aquellos utilizados en la construcción
                     tradicional, evitando así los tiempos de fragüe, y generando a la vez un sistema de ejecución
                     rápida, con una sobresaliente resistencia al fuego y mayores aislamientos térmico y acústico.
-                    <br>Todos los componentes que influyen en la construcción Steel Frame son controlados bajo
-                    estrictas
-                    normas de calidad y a su vez la conformación de la estructura es sometida a cálculos estructurales
-                    realizados por un Ingeniero Civil, por lo que la estabilidad y la sustentabilidad de la construcción
-                    supera a la construcción tradicional</p>
             </div>
             <img data-aos="fade-left" data-aos-duration="1500" class="steel-frame-img"
                 src="./assets/imgs/steel-frame.png" alt="">
@@ -149,12 +144,6 @@
             </div>
             <div class="item" data-aos="fade-right" data-aos-offset="120">
                 <i class="fas fa-check"></i>
-                <p> <span>Excelente aislación térmica y acústica:</span> Supera a la mampostería un 60% en materia de
-                    sonido y
-                    un 115% a nivel térmico.</p>
-            </div>
-            <div class="item" data-aos="fade-right" data-aos-offset="120">
-                <i class="fas fa-check"></i>
                 <p> <span>Velocidad:</span> Las viviendas en steel framing se construyen en un 70% menos de tiempo que
                     una obra
                     “húmeda”.</p>
@@ -169,12 +158,6 @@
                 <p> <span>Menor costo en mano de obra:</span> El steel framing emplea un 50% menos de personal que la
                     construcción
                     con ladrillos</p>
-            </div>
-            <div class="item" data-aos="fade-right" data-aos-offset="120">
-                <i class="fas fa-check"></i>
-                <p> <span>Menor costo en general:</span> Todas estas ventajas suponen una diferencia de costos cuando se
-                    desarrolla una obra en steel
-                    framing</p>
             </div>
         </div>
 
@@ -239,7 +222,7 @@
     <section id="contacto">
         <h2 data-aos="fade-right">Hace tu consulta aquí</h2>
         <div class="row" id="form-container" data-aos="fade-up">
-            <form class="col s12">
+            <form id="contact-form" class="col s12">
                 <div class="row">
                     <div class="input-field col s6">
                         <i class="material-icons prefix">account_circle</i>
@@ -267,7 +250,7 @@
                         <label for="textarea1">Consulta</label>
                     </div>
                 </div>
-                <button class="btn waves-effect waves-light" type="submit" name="action">Enviar
+                <button id="submit-btn" class="btn waves-effect waves-light" type="submit" name="action">Enviar
                     <i class="material-icons right"></i>
                 </button>
             </form>
@@ -278,6 +261,7 @@
 
     <footer>
         <div>
+            <img class="qr" src="./assets/imgs/qr.jpeg" alt="">
             <p class="copyright"> &copy; Khalifa 2020</p>
         </div>
         <div class="redes-container">
@@ -348,6 +332,8 @@
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0L83DFvfu4ovwwcYHX2VXYrTofjRW_aQ&callback=initMap">
     </script>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
