--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </script>
 
     <link rel="stylesheet" href="./materialize.css">
-     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
     <link rel="stylesheet" href="./reset.css">
@@ -222,38 +222,44 @@
     <section id="contacto">
         <h2 data-aos="fade-right">Hace tu consulta aquí</h2>
         <div class="row" id="form-container" data-aos="fade-up">
-            <form id="contact-form" class="col s12">
+            <form method="POST"
+                class="col s12 gform" onsubmit="handleSubmit()">
                 <div class="row">
                     <div class="input-field col s6">
                         <i class="material-icons prefix">account_circle</i>
-                        <input id="first_name" type="text" class="validate" autocomplete="off">
+                        <input name="name" id="first_name" type="text" class="validate" autocomplete="off">
                         <label for="first_name">Nombre</label>
                     </div>
                     <div class="input-field col s6">
                         <i class="material-icons prefix">mail</i>
-                        <input id="email" type="email" class="validate" autocomplete="off">
+                        <input name="email" id="email" type="email" class="validate" autocomplete="off">
                         <label for="email">Email</label>
                     </div>
                 </div>
                 <div class="row">
-                    
                     <div class="input-field col s12">
                         <i class="material-icons prefix">phone</i>
-                        <input id="icon_telephone" type="tel" class="validate" autocomplete="off">
+                        <input name="telephone" id="icon_telephone" type="tel" class="validate" autocomplete="off">
                         <label for="icon_telephone">Teléfono</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">mode_edit</i>
-                        <textarea id="textarea1" class="materialize-textarea"></textarea>
+                        <textarea name="message" id="textarea1" class="materialize-textarea"></textarea>
                         <label for="textarea1">Consulta</label>
                     </div>
                 </div>
                 <button id="submit-btn" class="btn waves-effect waves-light" type="submit" name="action">Enviar
                     <i class="material-icons right"></i>
                 </button>
+                <div style="display:none" class="thankyou_message">
+                    <!-- You can customize the thankyou message by editing the code below -->
+                    <p>Gracias por contactarte con nosotros! Te responderemos a la brevedad
+                    </p>
+                </div>
             </form>
+            
         </div>
         <div id="map" data-aos="fade-left"></div>
     </section>
@@ -267,10 +273,11 @@
         <div class="redes-container">
             <p>Seguinos en nuestras redes</p>
             <div class="redes">
-                <a target="_blank" href="https://www.facebook.com/Khalifa-Ingenier%C3%ADa-Construcci%C3%B3n-2129816087298336">
+                <a target="_blank"
+                    href="https://www.facebook.com/Khalifa-Ingenier%C3%ADa-Construcci%C3%B3n-2129816087298336">
                     <i class="fab fa-facebook"></i>
                 </a>
-                <a target="_blank"  href="https://www.instagram.com/khalifa_ing/">
+                <a target="_blank" href="https://www.instagram.com/khalifa_ing/">
                     <i class="fab fa-instagram"></i>
                 </a>
             </div>
@@ -334,6 +341,8 @@
     </script>
 
     <script src="script.js"></script>
+    <!-- <script data-cfasync="false" type="text/javascript"
+        src="https://calabroadrian.gitlab.io/chatbotprueba/form-submission-handler.js"></script> -->
 </body>
 
 </html>
