--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <header class="section-container">
         <img src="./assets/imgs/1899388.jpg" alt="" id="background-image">
         <nav class="navbar navbar-expand-lg navbar-dark" id="navbar">
-            <a class="navbar-brand" href="#"><img src="./assets/icons/kh-logo-2.png" class="kh-logo" alt=""></a>
+            <a class="navbar-brand" href="./#"><img src="./assets/icons/kh-logo-2.png" class="kh-logo" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -54,16 +54,16 @@
             <div class="collapse navbar-collapse navbar-right" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item ">
-                        <a class="nav-link" href="#servicios">Servicios</a>
+                        <a class="nav-link" href="./#servicios">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#steel-frame">Steel Frame</a>
+                        <a class="nav-link" href="./#steel-frame">Steel Frame</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#galeria">Obras</a>
+                        <a class="nav-link" href="./#galeria">Obras</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contacto">Consultas</a>
+                        <a class="nav-link" href="./#contacto">Consultas</a>
                     </li>
                 </ul>
             </div>
@@ -168,62 +168,64 @@
         <div data-aos="fade-right" class="nuestras-obras">
             <h2>Nuestras obras</h2>
         </div>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="./assets/imgs/carousel/posada-poetas-2.jpg" alt="First slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Obra en Posada de los poetas</h5>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/imgs/carousel/posada-poetas.jpg" alt="">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Obra en Posada de los poetas</h5>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/imgs/carousel/quincho-vaqueros.jpg" alt="">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Obra en Vaqueros</h5>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/imgs/carousel/mollar1.jpg" alt="">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Obra en El Mollar</h5>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/imgs/carousel/mollar2.jpg" alt="">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Obra en El Mollar</h5>
-                    </div>
-                </div>
+
+        <div class="obras" data-aos="fade-right">
+            <div class="obra">
+                <a href="./obras.html#hotel-posadas">
+                    <img src="./assets/imgs/obras/hotel posadas/IMG-7445.jpg" alt="">
+                    <h5>Hotel Posadas Ampliación</h5>
+                    <button>Ver más...</button>
+                </a>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+            <div class="obra">
+                <a href="./obras.html#duplex-mollar">
+                    <img src="./assets/imgs/obras/el mollar/IMG-0525.jpg" alt="">
+                    <h5>Duplex Mollar</h5>
+                    <button>Ver más...</button>
+                </a>
+            </div>
+            <div class="obra">
+                <a href="./obras.html#quincho-vaqueros">
+                    <img src="./assets/imgs/obras/quincho vaqueros/IMG-8796.jpg" alt="">
+                    <h5>Quincho Pileta y Deck Vaqueros</h5>
+                    <button>Ver más...</button>
+                </a>
+            </div>
+            <div class="obra">
+                <a href="./obras.html#obra-jockey">
+                    <img src="./assets/imgs/obras/obra jockey/IMG_3932.jpg" alt="">
+                    <h5>Vivienda Depósito Jockey</h5>
+                    <button>Ver más...</button>
+                </a>
+            </div>
+            <div class="obra">
+                <a href="./obras.html#obra-moldes">
+                    <img src="./assets/imgs/obras/obra moldes/IMG_7516.jpg" alt="">
+                    <h5>Ampliación 2do Piso Moldes</h5>
+                    <button>Ver más...</button>
+                </a>
+            </div>
+            <div class="obra">
+                <a href="./obras.html#duplex-sanluis">
+                    <img src="./assets/imgs/obras/duplex san luis/IMG-1532.jpg" alt="">
+                    <h5>Duplex San Luis</h5>
+                    <button>Ver más...</button>
+                </a>
+            </div>
+            <div class="obra">
+                <a href="./obras.html#cocacola">
+                    <img src="./assets/imgs/obras/coca cola/IMG_6967.jpg" alt="">
+                    <h5>Mantenimiento Racks Coca Cola</h5>
+                    <button>Ver más...</button>
+                </a>
+            </div>
         </div>
     </section>
 
     <section id="contacto">
         <h2 data-aos="fade-right">Hace tu consulta aquí</h2>
         <div class="row" id="form-container" data-aos="fade-up">
-            <form method="POST"
-                class="col s12 gform" onsubmit="handleSubmit()">
+            <form method="POST" class="col s12 gform" onsubmit="handleSubmit()">
                 <div class="row">
                     <div class="input-field col s6">
                         <i class="material-icons prefix">account_circle</i>
@@ -259,7 +261,7 @@
                     </p>
                 </div>
             </form>
-            
+
         </div>
         <div id="map" data-aos="fade-left"></div>
     </section>
@@ -284,7 +286,7 @@
         </div>
         <div class="info">
             <p>Encontranos en: </p>
-            <p class="sub-text">O'higgins 937, depto. 2"A", Capital</p>
+            <p class="sub-text">O'higgins 935, depto. 2"A", Capital</p>
             <p>Horarios de atencion:</p>
             <p class="sub-text">Lunes a viernes: 8:00 - 18:00 hs.</p>
             <p class="sub-text">Sábado: 8:00 - 14:00 hs.</p>
