--- a/obras.html
+++ b/obras.html
@@ -87,7 +87,7 @@
                 <p><span>Ubicación:</span> San Lorenzo</p>
                 <p><span>Arquitectura:</span> Diseño del Cliente</p>
             </div>
-            <img src="./assets/imgs/obras/hotel posadas/_AGU3844.jpg" alt="">
+            <img src="./assets/imgs/obras/hotel posadas/AGU3844.jpg" alt="">
             <img src="./assets/imgs/obras/hotel posadas/IMG-7422.jpg" alt="">
             <img src="./assets/imgs/obras/hotel posadas/IMG-7433.jpg" alt="">
             <img src="./assets/imgs/obras/hotel posadas/IMG-7445.jpg" alt="">
